0031997: Visualization, TKOpenGl - phong shader compilation error with normal texture map enabled

OpenGl_ShaderManager::defaultGlslVersion() now defines GLSL 120 for normal map texture.